# hat-backup

./: .travis.yml  Cargo.toml  README.md  seasoned-software.sh  seasoned-software.yaml  travis-install-libsodium.sh
backends/localdir/: hat-backup-delete  hat-backup-get  hat-backup-list  hat-backup-put
fuzz/: Cargo.toml
fuzz/fuzz_targets/: insert_file_bincode.rs  metadata_test_bincode.rs  metadata_test_cbor.rs  metadata_test_json.rs
fuzz/src/: lib.rs
migrations/20160213121713_create_keys/: up.sql
src/: errors.rs  lib.rs  main.rs
src/backend/: cmd.rs  devnull.rs  file.rs  memory.rs  mod.rs
src/blob/: benchmarks.rs  blob.rs  chunk.rs  mod.rs  tests.rs
src/crypto/: keys.rs  mod.rs
src/db/: mod.rs  schema.rs
src/hash/: mod.rs  tests.rs  tree.rs
src/hat/: benchmarks.rs  family.rs  fuse.rs  insert_path_handler.rs  mod.rs  tests.rs  walker.rs
src/key/: benchmarks.rs  hash_store_backend.rs  index.rs  mod.rs  schema.rs  tests.rs
src/models/: mod.rs
src/util/: mod.rs  process.rs  unique_priority_queue.rs
src/vfs/: fs.rs  fuse.rs  mod.rs  tests.rs
