[package]
authors = ["Johan Nielsen <sejr@google.com>"]
name = "hat-backup"
version = "0.0.1-pre"

[[bin]]
name = "hatbin"
path = "src/main.rs"

[dependencies]
argon2rs = "0.2.5"
arrayref = "0.3.4"
byteorder = "1.2.3"
chrono = "0.4.4"
clap = "2.32.0"
diesel_migrations = "1.3.0"
env_logger = "0.5.10"
error-type = "0.1.2"
filetime = "0.2.1"
fuse = "0.3.1"
hex = "0.3.2"
libc = "0.2.42"
libsodium-sys = "0.1.0"
log = "0.4.2"
lru-cache = "0.1.1"
quickcheck = "0.6.2"
rand = "0.5.3"
scoped-pool = "1.0.0"
secstr = "0.3.0"
serde = "1.0.67"
serde_cbor = "0.8.2"
serde_derive = "1.0.67"
time = "0.1.40"
void = "1.0.2"

[dependencies.diesel]
default-features = false
features = [
    "sqlite",
    "chrono",
]
version = "1.3.2"

[features]
benchmarks = []
default = []
simd = ["argon2rs/simd"]

[lib]
name = "hat"
path = "src/lib.rs"
[profile.release]
debug = true
